<resources>
    <string name="app_name">My Application</string>
    <string name="crear_padre">Crear Tienda</string>
    <string name="listar_padre">Listar Tienda</string>
    <string name="nombre_tienda">Nombre Tienda</string>
    <string name="direccion">Dirección</string>
    <string name="fecha_apertura">Fecha Apertura</string>
    <string name="ruc">RUC</string>
    <string name="matriz">Matriz</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
